force-app/main/default/objects/Role_Learning_Path_Association__c/Role_Learning_Path_Association__c.object-meta.xml
<CustomObject>
    <label>Role Learning Path Association</label>
    <nameField>
        <displayFormat>LPA{00000}</displayFormat>
        <label>Role Learning Path Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Learning Path Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>