force-app/main/default/objects/Role_Learning_Path_Association__c/fields/All_Roles__c.field-meta.xml
<CustomField>
    <fullName>All_Roles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assign learning path to all roles in the identified region.</description>
    <inlineHelpText>Assign learning path to all roles in the identified region.</inlineHelpText>
    <label>All Roles</label>
    <type>Checkbox</type>
</CustomField>