force-app/main/default/objects/Role_Learning_Path_Association__c/fields/Effective_Date_End__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_End__c</fullName>
    <description>Learning Path auto-assignment stops on this date.</description>
    <inlineHelpText>Enter the date learning path auto-assignment ends.  Leave this field blank if you want learning path auto-assignment to continue indefinitely.</inlineHelpText>
    <label>Effective Date End</label>
    <type>Date</type>
</CustomField>