force-app/main/default/objects/Role_Learning_Path_Association__c/fields/Effective_Date_Start__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Start__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Learning Path is auto-assigned on or after this date.</description>
    <inlineHelpText>Enter the date that the learning path auto-assigning starts.</inlineHelpText>
    <label>Effective Date Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>