force-app/main/default/objects/Role_Learning_Path_Association__c/fields/Learning_Path__c.field-meta.xml
<CustomField>
    <fullName>Learning_Path__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Learning Path</label>
    <referenceTo>lmscons__Learning_Path__c</referenceTo>
    <relationshipLabel>Role Learning Path Associations</relationshipLabel>
    <relationshipName>Role_Learning_Path_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>