force-app/main/default/objects/Role_Learning_Path_Association__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Region</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Role Learning Path Associations</relationshipLabel>
    <relationshipName>Role_Learning_Path_Associations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>