force-app/main/default/objects/Role_Learning_Path_Association__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Role Learning Path Associations</relationshipLabel>
    <relationshipName>Role_Learning_Path_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>