force-app/main/default/objects/Role_Learning_Path_Association__c/fields/VolunteerAssignmentCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>VolunteerAssignmentCreatedDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Learning Path is assigned only to volunteers whose volunteer assignment create date is on or after this specified date.</description>
    <inlineHelpText>Learning Path is assigned only to volunteers whose volunteer assignment create date is on or after this specified date.</inlineHelpText>
    <label>Volunteer Assignment Create Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>