force-app/main/default/objects/Role_Learning_Path_Association__c/validationRules/Start_Date_Cannot_be_Before_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Cannot_be_Before_Today</fullName>
    <active>true</active>
    <description>Effective Date Start cannot be before Today.</description>
    <errorConditionFormula>AND(
 OR( ISCHANGED( Effective_Date_Start__c), ISNEW()), 
 Effective_Date_Start__c &lt; TODAY() 
)</errorConditionFormula>
    <errorDisplayField>Effective_Date_Start__c</errorDisplayField>
    <errorMessage>Effective Date Start cannot be before Today.</errorMessage>
</ValidationRule>