force-app/main/default/objects/Role_Learning_Path_Association__c/validationRules/Start_Date_Must_be_Before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Must_be_Before_End_Date</fullName>
    <active>true</active>
    <description>Effective Date End cannot be before the Effective Date Start.</description>
    <errorConditionFormula>Effective_Date_Start__c  &gt;   Effective_Date_End__c</errorConditionFormula>
    <errorDisplayField>Effective_Date_End__c</errorDisplayField>
    <errorMessage>Effective Date End cannot be before the Effective Date Start.</errorMessage>
</ValidationRule>