force-app/main/default/objects/Role_Learning_Path_Association__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Learning_Path__c</columns>
    <columns>Role__c</columns>
    <columns>Program__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>